# markkurzeja.github.io

./: .gitignore  CLAUDE.md  README  README.md  about.md  build.py  exec_game_design.html  experiment_directory.html  hugo.toml  index.html  methods_vs_goals.html  orthonormal_recipe.html  pyproject.toml  reproducible_research.html  rff_intro.html  test_build.py  tufte.css
.claude/skills/: tufte-patterns.md
.claude/skills/build-post/: SKILL.md
.claude/skills/katex-math/: SKILL.md
.claude/skills/new-post/: SKILL.md
.claude/skills/structured-proof/: SKILL.md
.claude/skills/tufte-patterns/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
content/: _index.md
content/page/: about.md
content/post/: norm_growth.md  orthonormal_recipe.md  rff.md  rff_intro.md  rff_other.md  tensor-tales.md
layouts/partials/: footer_custom.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/page/: index.html  index.xml
public/page/1/: index.html
public/page/about/: index.html
public/page/page/1/: index.html
public/post/: index.html  index.xml
public/post/orthonormal_recipe/: index.html
public/post/page/1/: index.html
public/post/rff/: index.html
public/post/rff_intro/: index.html
public/post/tensor-tales/: index.html
public/tags/: index.html  index.xml
src/: exec_game_design.md  experiment_directory.md  methods_vs_goals.md  orthonormal_recipe.md  reproducible_research.md  rff_intro.md
static/: tufte.css
templates/: base.html  index.html
